[style] applicant list spacing issue

--- a/themes/Intervue/less/style.less
+++ b/themes/Intervue/less/style.less
@@ -1743,7 +1743,7 @@ table.simpleTable td.total {
 #applicantList table { border: 1px solid @darkBorders; }
 #applicantList h2 { font-size: 30px; line-height: 16px; }
 #applicantList table h2 a { font-size: 14px; line-height: 0; }
-#applicantList th { padding: 8px 0; line-height: 18px; }
+#applicantList th { padding: 8px; line-height: 18px; }
 #applicantList td { font-size: 14px; line-height: 18px; border-right: none; }
 
 #applicantList td:first-child {
@@ -1776,6 +1776,7 @@ table.simpleTable td.total {
 }
 
 a.btn.lightGrey.playBtn { padding: 0; }
+a.btn.lightGrey.lessPad { padding: 6px 10px; }  
 
 th.coverLetter { width: 100px; }
 
